# trail

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASING.md  ROADMAP.md  release-please-config.json  rustfmt.toml
crates/crabdb/: Cargo.toml
crates/crabdb/benches/: sqlite_vector_memory_bench.rs
crates/crabdb/src/: acp.rs  db.rs  error.rs  ids.rs  lib.rs  main.rs  mcp.rs  model.rs  server.rs
crates/crabdb/src/cli/: command.rs
crates/crabdb/src/db/: agent.rs  mod.rs
crates/crabdb/src/mcp/: audit.rs  capabilities.rs  completion.rs  mod.rs  prompt.rs  protocol.rs  resource.rs  response.rs  tool_call.rs  tools.rs  types.rs
crates/crabdb/src/model/: agent.rs  domain.rs  inspect.rs  reports.rs
crates/crabdb/src/server/: openapi.rs  request_types.rs  route.rs  transport.rs
crates/crabdb/tests/: e2e.rs  product_workflows.rs  prolly_import.rs
crates/prolly/: .gitignore  Cargo.toml  LICENSE  PERFORMANCE.md  README.md  docker-compose.store-services.yml
crates/prolly/benches/: ai_workloads_bench.rs  pglite_scale_bench.rs  prolly_bench.rs  slatedb_ops_bench.rs  slatedb_scale_bench.rs  slatedb_workload_bench.rs  sqlite_scale_bench.rs  store_diff_merge_bench.rs
crates/prolly/bindings/: README.md  VERIFICATION.md  pom.xml
crates/prolly/bindings/go/: COOKBOOK.md  README.md  callbacks.go  context.go  go.mod  prolly.go  prolly_test.go
crates/prolly/bindings/java/: COOKBOOK.md  README.md  pom.xml
crates/prolly/bindings/kotlin/: COOKBOOK.md  README.md  build.gradle.kts  pom.xml  settings.gradle.kts
crates/prolly/bindings/node/: COOKBOOK.md  PROVENANCE.md  README.md  index.cjs  index.d.ts  package-lock.json  package.json
crates/prolly/bindings/python/: COOKBOOK.md  README.md  pyproject.toml
crates/prolly/bindings/ruby/: COOKBOOK.md  README.md  Rakefile  prolly.gemspec
crates/prolly/bindings/swift/: COOKBOOK.md  Package.swift  README.md
crates/prolly/bindings/uniffi/: Cargo.toml  README.md  uniffi.toml
crates/prolly/bindings/wasm/: COOKBOOK.md  Cargo.toml  PROVENANCE.md  README.md  package.json
crates/prolly/conformance/: README.md  prolly-fixtures.v1.json
crates/prolly/docs/: README.md  architecture.md  async-store.md  cookbook.md  design-spec.md  design.md  getting-started.md  guides.md  implementation.md  language-bindings-design.md  language-ports.md  object-store-vcs-design.md  performance.md  roadmap.md  wire-format.md
crates/prolly/examples/: agent_event_log.rs  background_compaction.rs  basic_map.rs  batch_build.rs  conversation_memory.rs  crdt_merge.rs  deterministic_rag_snapshot.rs  diff_merge.rs  document_chunk_index.rs  file_blob_store.rs  filesystem_snapshot.rs  materialized_view.rs  provenance_values.rs  resolver.rs  secondary_index.rs  vector_sidecar.rs
crates/prolly/scripts/: verify-store-services.sh
crates/prolly/src/: lib.rs
crates/prolly/src/prolly/: README.md  batch.rs  blob.rs  boundary.rs  builder.rs  cid.rs  config.rs  crdt.rs  cursor.rs  debug.rs  diff.rs  encoding.rs  error.rs  gc.rs  key.rs  manifest.rs  mod.rs  node.rs  parallel.rs  policy.rs  proof.rs  range.rs  rebalance.rs  remote.rs  snapshot.rs  stats.rs  streaming.rs  sync.rs  tombstone.rs  traits.rs  tree.rs  utils.rs  value.rs
crates/prolly/stores/prolly-store-cosmosdb/: Cargo.toml  README.md
crates/prolly/stores/prolly-store-dynamodb/: Cargo.toml  README.md
crates/prolly/tests/: async_store.rs  basic_ops.rs  batch_behavior.rs  batch_stats.rs  conflict_streaming.rs  conformance_fixtures.rs  debug_visualization.rs  diff_merge.rs  file_node_store.rs  gc.rs  inspect_cli.rs  invariants.rs  key_helpers.rs  key_proofs.rs  large_value_offload.rs  merge_explain.rs  merge_policy_registry.rs  performance_hints.rs  pglite_store.rs  range_limited_merge.rs  resumable_diff.rs  resumable_range.rs  rocksdb_store.rs  slatedb_store.rs  snapshot_manager.rs  sqlite_store.rs  store_conformance.rs  structural_diff_cursor.rs  sync_primitives.rs  tombstone_helpers.rs  traversal.rs  value_codecs.rs
trail/: Cargo.toml
trail-environment-adapter-sdk/: Cargo.toml  README.md
trail-environment-adapter-sdk/examples/: adversarial-adapter.rs  cache-adapter.rs  cache-fixture-tool.rs  fixture-sign-adapter.rs  generated-copy-adapter.rs  mounted-fixture-tool.rs  mounted-initializer-adapter.rs
trail-environment-adapter-sdk/src/: lib.rs
trail/benches/: acp_relay_bench.rs  sqlite_vector_memory_bench.rs
trail/src/: acp.rs  agent_hooks.rs  error.rs  ids.rs  lib.rs  model.rs  server.rs
trail/src/acp/: capture.rs  protocol.rs  registry.rs  schema.rs  setup.rs  transform.rs  transport.rs
trail/src/agent_hooks/: install.rs  parsing.rs
trail/src/cli/: command.rs  environment_sandbox.rs  mod.rs
trail/src/db/: agent.rs  mod.rs  performance.rs
trail/src/mcp/: audit.rs  capabilities.rs  completion.rs  prompt.rs  protocol.rs  resource.rs  response.rs  tools.rs  utils.rs
trail/src/model/: agent_capture.rs  agent_evidence.rs  lane.rs  reports.rs
trail/src/server/: openapi.rs  request_types.rs  route.rs  transport.rs
trail/src/test_support/: scoped_state.rs
trail/tests/: acp_capture_journal.rs  acp_client_callbacks.rs  acp_conformance.rs  acp_faults.rs  acp_interop.rs  acp_session_semantics.rs  acp_transform.rs  acp_transport.rs  acp_turn_semantics.rs  acp_update_semantics.rs  acp_workspace_mapping.rs  changed_path_ledger_activation.rs  changed_path_ledger_api.rs  changed_path_ledger_command_long_lock.rs  changed_path_ledger_commands.rs  changed_path_ledger_daemon.rs  changed_path_ledger_git.rs  changed_path_ledger_linux.rs  changed_path_ledger_macos.rs  changed_path_ledger_materialized_lane.rs  changed_path_ledger_producers.rs  changed_path_ledger_reconcile.rs  changed_path_ledger_recovery.rs  changed_path_ledger_views.rs  e2e.rs  lane_initialization.rs  lane_initialization_faults.rs  prolly.rs  schema_v18_hard_cutover.rs  schema_v19_lane_initializations.rs  schema_v20_lane_initialization_owners.rs  terminal_output_guard.rs
trail/tests/fixtures/: changed_path_producers.v1  changed_path_raw_mutations.v1
trail/tests/support/: acp_harness.rs
(+1304 files in other folders)
