[workspace]
members = [
    "crates/crabdb",
    "crates/prolly",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.81"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
rayon = "1.10"
rocksdb = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
ignore = "0.4"
getrandom = "0.2"
similar = "2.6"
tempfile = "3.10"
thiserror = "1.0"
toml = "0.8"
walkdir = "2.5"

[workspace.lints.rust]
unsafe_code = "forbid"
