[workspace]
members = [
    "crates/crabdb",
    "crates/prolly",
    "crates/prolly/bindings/node/native",
    "crates/prolly/bindings/uniffi",
    "crates/prolly/bindings/wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.81"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
rayon = "1.10"
rocksdb = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "=0.1.9"
rustix = { version = "1.1.4", features = ["fs", "process"] }
futures-util = "0.3"
slatedb = "0.14.0"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
ignore = "0.4"
libc = "0.2"
notify = "6.1"
getrandom = "0.2"
similar = "2.6"
tempfile = "3.10"
thiserror = "1.0"
tokio = { version = "1.45", features = ["rt-multi-thread", "time"] }
toml = "0.8"
unicode-normalization = "0.1"
walkdir = "2.5"
uniffi = "=0.31.0"
wasm-bindgen = "0.2.126"
js-sys = "0.3.103"

[workspace.lints.rust]
unsafe_code = "allow"
