[workspace]
members = [
    "trail",
    "trail-environment-adapter-sdk",
    "prolly",
    "prolly/stores/prolly-store-cosmosdb",
    "prolly/stores/prolly-store-dynamodb",
    "prolly/stores/prolly-store-mysql",
    "prolly/stores/prolly-store-pglite",
    "prolly/stores/prolly-store-postgres",
    "prolly/stores/prolly-store-redis",
    "prolly/stores/prolly-store-rocksdb",
    "prolly/stores/prolly-store-slatedb",
    "prolly/stores/prolly-store-sqlite",
    "prolly/stores/prolly-store-spanner",
    "prolly/stores/prolly-store-test",
    "prolly/bindings/node/native",
    "prolly/bindings/uniffi",
    "prolly/bindings/wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.81"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Crab Build"]
repository = "https://github.com/crabbuild/trail"
homepage = "https://github.com/crabbuild/trail"
readme = "README.md"

# The profile used for binaries published through GitHub Releases.
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Whether to consider the binaries in a package for distribution (defaults true)
dist = false
# Whether to publish prereleases to package managers
publish-prereleases = false
# Which actions to run on pull requests
pr-run-mode = "plan"
# Checksums to generate for each App
checksum = "sha256"
# Whether to enable GitHub Attestations
github-attestations = true
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Custom message to display on successful install
install-success-msg = "Trail is installed. Run `trail --version` to verify it."
# Whether to install an updater program
install-updater = false

[workspace.dependencies]
bzip2 = "0.5"
ed25519-dalek = "2.2"
flate2 = "1.0"
rayon = "1.10"
rocksdb = "0.22"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1.0"
globset = "0.4"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "=0.1.9"
rustix = { version = "1.1.4", features = ["fs", "process"] }
futures-util = "0.3"
slatedb = "0.14.0"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
ignore = "0.4"
libc = "0.2"
landlock = "0.4.5"
notify = "6.1"
getrandom = "0.2"
similar = "2.6"
tempfile = "3.10"
tar = "0.4"
thiserror = "1.0"
tokio = { version = "1.45", features = ["rt-multi-thread", "time"] }
toml = "0.8"
unicode-normalization = "0.1"
unicode-width = "0.2.2"
terminal_size = "0.4.4"
anstyle = "1.0.14"
time = { version = "=0.3.36", features = ["formatting"] }
walkdir = "2.5"
zip = { version = "0.6.6", default-features = false, features = ["bzip2", "deflate"] }
uniffi = "=0.31.0"
wasm-bindgen = "0.2.126"
js-sys = "0.3.103"

[workspace.lints.rust]
unsafe_code = "allow"
