[package]
name = "trail-environment-adapter-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Versioned, capability-constrained protocol types for Trail environment adapter plugins"
readme = "README.md"

[dependencies]
serde.workspace = true
serde_bytes.workspace = true
serde_cbor.workspace = true
thiserror.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
hex.workspace = true
sha2.workspace = true
toml.workspace = true

[lints]
workspace = true
