[package]
name = "trail"
description = "Local-first operation database for code and text worktrees."
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[package.metadata.dist]
dist = true

[features]
default = []
macfuse = ["dep:fuser"]

[dependencies]
bzip2.workspace = true
clap.workspace = true
flate2.workspace = true
getrandom.workspace = true
hex.workspace = true
ignore.workspace = true
libc.workspace = true
notify.workspace = true
prolly = { package = "prolly-map", path = "../prolly", features = ["slatedb", "sqlite"] }
rayon.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
rustix.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
sha2.workspace = true
slatedb.workspace = true
similar.workspace = true
sqlite-vec.workspace = true
tar.workspace = true
thiserror.workspace = true
toml.workspace = true
unicode-normalization.workspace = true
walkdir.workspace = true
zip.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.15.1", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
async-trait = "0.1"
fuser = { version = "0.15.1", features = ["macfuse-4-compat"], optional = true }
nfsserve = "0.11"
tokio = { workspace = true, features = ["io-util", "macros", "net", "sync"] }

[target.'cfg(target_os = "windows")'.dependencies]
dokan = "0.3.1"
dokan-sys = "0.3.1"
widestring = "0.4.3"
winapi = { version = "0.3", features = ["fileapi", "handleapi", "minwinbase", "ntdef", "ntstatus", "processthreadsapi", "winnt"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true

[[bench]]
name = "sqlite_vector_memory_bench"
harness = false
