[package]
name = "trail"
description = "Local-first operation database for code and text worktrees."
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[package.metadata.dist]
dist = true

[features]
default = []
macfuse = ["dep:fuser"]

[dependencies]
bzip2.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
flate2.workspace = true
getrandom.workspace = true
hex.workspace = true
ignore.workspace = true
jsonschema.workspace = true
libc.workspace = true
notify.workspace = true
prolly = { package = "prolly-map", version = "0.5.0" }
prolly-store-slatedb = "0.3.0"
prolly-store-sqlite = "0.3.0"
rayon.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
rustix.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
globset.workspace = true
sha2.workspace = true
slatedb.workspace = true
similar.workspace = true
sqlite-vec.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
trail-environment-adapter-sdk = { path = "../trail-environment-adapter-sdk" }
unicode-normalization.workspace = true
unicode-width.workspace = true
url.workspace = true
terminal_size.workspace = true
anstyle.workspace = true
time.workspace = true
walkdir.workspace = true
zip.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.15.1", default-features = false }
inotify.workspace = true
landlock.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
async-trait = "0.1"
core-foundation-sys.workspace = true
fsevent-sys.workspace = true
fuser = { version = "0.15.1", features = ["macfuse-4-compat"], optional = true }
nfsserve = "0.11"
tokio = { workspace = true, features = ["io-util", "macros", "net", "sync"] }

[target.'cfg(target_os = "windows")'.dependencies]
dokan = "0.3.1"
dokan-sys = "0.3.1"
widestring = "0.4.3"
winapi = { version = "0.3", features = ["errhandlingapi", "fileapi", "handleapi", "jobapi2", "minwinbase", "ntdef", "ntstatus", "processthreadsapi", "sddl", "securitybaseapi", "synchapi", "userenv", "winbase", "winerror", "winnt"] }

[dev-dependencies]
proptest = "=1.8.0"

[lints]
workspace = true

[[bench]]
name = "sqlite_vector_memory_bench"
harness = false

[[bench]]
name = "acp_relay_bench"
harness = false
