[package]
name = "crabdb"
description = "Local-first operation database for code and text worktrees."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
getrandom.workspace = true
hex.workspace = true
ignore.workspace = true
notify.workspace = true
prolly = { path = "../prolly", features = ["sqlite"] }
rayon.workspace = true
rusqlite.workspace = true
rustix.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
sha2.workspace = true
similar.workspace = true
thiserror.workspace = true
toml.workspace = true
unicode-normalization.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
