[build-system]
requires = ["maturin>=1.10,<2.0", "uniffi-bindgen==0.31.0"]
build-backend = "maturin"

[project]
name = "crabdb-prolly-binding"
version = "0.1.0"
description = "Python binding compatibility harness for CrabDB prolly-map fixtures"
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=8.3"]

[tool.maturin]
bindings = "uniffi"
manifest-path = "../uniffi/Cargo.toml"
python-packages = ["prolly"]
module-name = "prolly.uniffi"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
