[package]
name = "prolly-store-cosmosdb"
description = "Cosmos DB store adapter for prolly-map."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository = "https://github.com/crabbuild/prolly"

[lib]
name = "prolly_store_cosmosdb"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
hex.workspace = true
hmac = "0.12.1"
httpdate = "1.0.3"
percent-encoding = "2.3.2"
prolly = { package = "prolly-map", path = "../..", version = "0.1.0", features = ["async-store"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
