[package]
name = "prolly-store-dynamodb"
description = "DynamoDB store adapter for prolly-map."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository = "https://github.com/crabbuild/prolly"

[lib]
name = "prolly_store_dynamodb"
path = "src/lib.rs"

[dependencies]
aws-sdk-dynamodb = "=1.73.0"
prolly = { package = "prolly-map", path = "../..", version = "0.1.0", features = ["async-store"] }

[dev-dependencies]
aws-config = { version = "=1.5.18", features = ["behavior-version-latest"] }
tokio.workspace = true

[lints]
workspace = true
