[package]
name = "prolly-store-postgres"
description = "PostgreSQL store adapter for prolly-map."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository = "https://github.com/crabbuild/prolly"

[lib]
name = "prolly_store_postgres"
path = "src/lib.rs"

[dependencies]
prolly = { package = "prolly-map", path = "../..", version = "0.1.0", features = ["async-store"] }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio"] }

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
