[package]
name = "prolly-store-spanner"
description = "Cloud Spanner store adapter for prolly-map."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository = "https://github.com/crabbuild/prolly"

[lib]
name = "prolly_store_spanner"
path = "src/lib.rs"

[dependencies]
google-cloud-googleapis = { package = "gcloud-googleapis", version = "1.3.0", features = ["spanner"] }
google-cloud-spanner = { package = "gcloud-spanner", version = "=1.8.1" }
prolly = { package = "prolly-map", path = "../..", version = "0.1.0", features = ["async-store"] }

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
